--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -40,10 +40,16 @@
 
 .main .main__desc {
   width: 100%;
-  height: 500px;
+
   border: 1px solid #999;
   border-radius: 4px;
   box-shadow: 4px 4px 2px #999;
+  padding: 40px 0px;
+}
+
+.main .main__desc:hover {
+  background-color: darkgray;
+  color: #fff;
 }
 
 .main .main__footer {
