--- a/views/screens/create.pug
+++ b/views/screens/create.pug
@@ -3,7 +3,7 @@ extends ../layouts/main.pug
 block content
     .createBox 
         h2 새로운 메모에 작성하기
-        form(action="#", method="post")
+        form(action="postCreate", method="post")
             textarea(name="desc",placeholed="description..." )
             button(type="submit") 등록
         form(action="/", method="get")
